# pico-iie

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  main.c  main.h  main.py  parallel.pio
common/: audio.c  audio.h  disk.c  disk.h  disk_rom.h  game.c  game.h  joystick.c  joystick.h  keyboard.c  keyboard.h  ram.c  ram.h  rom.c  rom.h  rom_data.h  video.c  video.h  video_char_data.h
mcu/: cassette.c  cassette.h  clock.c  clock.h  joystick.c  joystick.h  key.c  key.h  keys.c  keys.h  led.c  led.h  menu.c  menu.h  ps2.c  ps2.h  serial.c  serial.h  speaker.c  speaker.h  test.c  test.h  vga.c  vga.h
pcb/: pico-iie.dch  pico-iie.dip
